--- a/index.html
+++ b/index.html
@@ -89,17 +89,19 @@
             <h2 class="section-title">My Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3>Frontend</h3>
+                    <h3>Skills Set</h3>
                     <div class="skill-items">
-                        <span class="skill-item">HTML5</span>
-                        <span class="skill-item">CSS3</span>
+                        <span class="skill-item">Excel</span>
+                        <span class="skill-item">Advance Excel</span>
+                        <span class="skill-item">PowerBI</span>
+                        <span class="skill-item">HTML</span>
+                        <span class="skill-item">CSS</span>
                         <span class="skill-item">JavaScript</span>
-                        <span class="skill-item">React</span>
-                        <span class="skill-item">Vue.js</span>
-                        <span class="skill-item">TypeScript</span>
+                        <span class="skill-item">Python</span>
+                        <span class="skill-item">MYSQL</span>
                     </div>
                 </div>
-                <div class="skill-category">
+                <!-- <div class="skill-category">
                     <h3>Backend</h3>
                     <div class="skill-items">
                         <span class="skill-item">Node.js</span>
@@ -120,7 +122,7 @@
                         <span class="skill-item">Jest</span>
                         <span class="skill-item">CI/CD</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -131,25 +133,25 @@
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-image">
+                    <!-- <div class="project-image">
                         <img src="https://via.placeholder.com/400x250/3b82f6/ffffff?text=E-Commerce+App" alt="E-Commerce Platform">
-                    </div>
+                    </div> -->
                     <div class="project-content">
-                        <h3>E-Commerce Platform</h3>
-                        <p>A full-featured online shopping platform with React, Node.js, and Stripe integration.</p>
+                        <h3>FlipKart Data Visualization</h3>
+                        <p>Converted Flipkart dataset into a pie chart to facilitate quick and effective visual analysis of sales distribution.</p>
                         <div class="project-tech">
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>MongoDB</span>
+                            <span>Excel</span>
+                            <span>PowerBI</span>
+                            <!-- <span>MongoDB</span> -->
                         </div>
-                        <div class="project-links">
+                        <!-- <div class="project-links">
                             <a href="#" class="btn btn-small"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                             <a href="#" class="btn btn-small btn-outline"><i class="fab fa-github"></i> Code</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
-                <div class="project-card">
+                <!-- <div class="project-card">
                     <div class="project-image">
                         <img src="https://via.placeholder.com/400x250/10b981/ffffff?text=Task+Manager" alt="Task Management App">
                     </div>
@@ -185,7 +187,7 @@
                             <a href="#" class="btn btn-small btn-outline"><i class="fab fa-github"></i> Code</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
